--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -3,20 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import jittor as jt\n",
     "from models_jittor import gMLPForImageClassification as gMLP_jt\n",
     "from models_jittor import ResMLPForImageClassification as ResMLP_jt\n",
     "from models_jittor import MLPMixerForImageClassification as MLPMixer_jt\n",
     "from models_jittor import ViP as ViP_jt\n",
-    "from models_jittor import S2MLPv2 as S2MLPv2_jt"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "from models_jittor import S2MLPv2 as S2MLPv2_jt\n",
+    "from models_jittor import ConvMixer as ConvMixer_jt"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "from models_pytorch import gMLPForImageClassification as gMLP_pt\n",
@@ -24,14 +27,15 @@
     "from models_pytorch import MLPMixerForImageClassification as MLPMixer_pt\n",
     "from models_pytorch import ViP as ViP_pt\n",
     "from models_pytorch import S2MLPv2 as S2MLPv2_pt \n",
+    "from models_pytorch import ConvMixer as ConvMixer_pt \n",
     "import time"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# model_jt = gMLP_jt(\n",
     "#     image_size=224,\n",
@@ -63,42 +67,54 @@
     "# )\n",
     "\n",
     "# model_jt = ViP_jt(\n",
-    "#     image_size=(224, 112),\n",
+    "#     image_size=(224, 224),\n",
     "#     patch_size=(16, 8),\n",
     "#     in_channels=3,\n",
     "#     num_classes=1000,\n",
     "#     d_model=256,\n",
     "#     depth=30,\n",
     "#     segments = 16,\n",
+    "#     expansion_factor = 4,\n",
     "#     weighted = False\n",
     "# )\n",
     "\n",
-    "model_jt = S2MLPv2_jt(\n",
-    "    in_channels = 3,\n",
-    "    image_size = (224,224),\n",
-    "    patch_size = [7],\n",
-    "    d_model = [384],\n",
-    "    depth = [18],\n",
-    "    num_classes = 1000, \n",
-    "    expansion_factor = [3]\n",
+    "# model_jt = S2MLPv2_jt(\n",
+    "#     in_channels = 3,\n",
+    "#     image_size = (224,224),\n",
+    "#     patch_size = [7],\n",
+    "#     d_model = [384],\n",
+    "#     depth = [18],\n",
+    "#     num_classes = 1000, \n",
+    "#     expansion_factor = [3]\n",
+    "# )\n",
+    "\n",
+    "model_jt = ConvMixer_jt(\n",
+    "    dim = 1568,\n",
+    "    depth = 20\n",
     ")\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
-    "model_pt = gMLP_pt(\n",
-    "    image_size=(224,224),\n",
-    "    patch_size=16,\n",
-    "    in_channels=3,\n",
-    "    num_classes=1000,\n",
-    "    d_model=256,\n",
-    "    d_ffn=1536,\n",
-    "    depth=30\n",
+    "# model_pt = gMLP_pt(\n",
+    "#     image_size=(224,224),\n",
+    "#     patch_size=16,\n",
+    "#     in_channels=3,\n",
+    "#     num_classes=1000,\n",
+    "#     d_model=256,\n",
+    "#     d_ffn=1536,\n",
+    "#     depth=30\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "model_pt = ConvMixer_pt(\n",
+    "    dim = 1568,\n",
+    "    depth = 20\n",
     ")\n",
     "\n",
     "# model_pt = ResMLP_pt(\n",
@@ -140,59 +156,65 @@
     "#     num_classes = 1000, \n",
     "#     expansion_factor = [3, 3]\n",
     "# )"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "images = jt.randn(8, 3, 224, 224)\n",
     "\n",
     "with jt.no_grad():\n",
     "    output = model_jt(images)\n",
     "print(output.shape)\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "images = torch.randn(8, 3, 224, 224)\n",
     "\n",
     "with torch.no_grad():\n",
     "    output = model_pt(images)\n",
     "print(output.shape)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from torchsummary import summary\n",
     "summary(model_pt, (3, 224, 224), device=\"cpu\")\n",
     "\n",
+    "total_params = sum(p.numel() for p in model_pt.parameters())\n",
+    "print(f'{total_params:,} total parameters.')\n",
+    "total_trainable_params = sum(\n",
+    "    p.numel() for p in model_pt.parameters() if p.requires_grad)\n",
+    "print(f'{total_trainable_params:,} training parameters.')\n",
+    "\n",
     "# from torchstat import stat\n",
     "# stat(model_pt, (3, 224, 224))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 时间性能测试方法"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "jt.flags.use_cuda = 1\n",
@@ -208,21 +230,13 @@
     "turns = 100\n",
     "\n",
     "# 定义 pytorch & jittor 的xxx模型，如vgg\n",
-    "pytorch_model = MLPMixer_pt(\n",
-    "                    image_size=(224,224),\n",
-    "                    patch_size=16,\n",
-    "                    in_channels=3,\n",
-    "                    num_classes=1000,\n",
-    "                    d_model=256,\n",
-    "                    depth=12,\n",
+    "pytorch_model = ConvMixer_pt(\n",
+    "                    dim = 1568,\n",
+    "                    depth = 20\n",
     "                ).cuda()\n",
-    "jittor_model = MLPMixer_jt(\n",
-    "                    image_size=(224,224),\n",
-    "                    patch_size=16,\n",
-    "                    in_channels=3,\n",
-    "                    num_classes=1000,\n",
-    "                    d_model=256,\n",
-    "                    depth=12,\n",
+    "jittor_model = ConvMixer_jt(\n",
+    "                    dim = 1568,\n",
+    "                    depth = 20\n",
     "                )\n",
     "\n",
     "# 把模型都设置为eval来防止dropout层对输出结果的随机影响\n",
@@ -232,14 +246,14 @@
     "# jittor加载pytorch的初始化参数来保证参数完全相同\n",
     "jittor_model.load_parameters(pytorch_model.state_dict())\n",
     "\n",
-    "key = \"MLPMixer\""
-   ],
-   "outputs": [],
-   "metadata": {}
+    "key = \"ConvMixer\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 测试Pytorch一次前向传播的平均用时\n",
     "for i in range(10):\n",
@@ -253,13 +267,13 @@
     "tc_time = round((end - sta) / turns, 5) # 执行turns次的平均时间，输出时保留5位小数\n",
     "tc_fps = round(bs * turns / (end - sta),0) # 计算FPS\n",
     "print(f\"- Pytorch {key} forward average time cost: {tc_time}, Batch Size: {bs}, FPS: {tc_fps}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 测试Jittor一次前向传播的平均用时\n",
     "for i in range(10):\n",
@@ -276,13 +290,13 @@
     "jt_time = round((time.time() - sta) / turns, 5) # 执行turns次的平均时间，输出时保留5位小数\n",
     "jt_fps = round(bs * turns / (end - sta),0) # 计算FPS\n",
     "print(f\"- Jittor {key} forward average time cost: {jt_time}, Batch Size: {bs}, FPS: {jt_fps}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "threshold = 1e-3\n",
     "# 计算 pytorch & jittor 前向结果相对误差. 如果误差小于threshold，则测试通过.\n",
@@ -292,32 +306,30 @@
     "diff = relative_error.mean()\n",
     "assert diff < threshold, f\"[*] {key} forward fails..., Relative Error: {diff}\"\n",
     "print(f\"[*] {key} forword passes with Relative Error {diff}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "5b4ef2005a63f3fbfcb002c702638f25d4022724161b309cbd0d4166936ce374"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.5",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "33c023bf5980af423125aca9a625c46b0823ed829175682be9d8faf5aeee714b"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
