--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -12,7 +12,10 @@
     "from models_jittor import MLPMixerForImageClassification as MLPMixer_jt\n",
     "from models_jittor import ViP as ViP_jt\n",
     "from models_jittor import S2MLPv2 as S2MLPv2_jt\n",
-    "from models_jittor import ConvMixer as ConvMixer_jt"
+    "from models_jittor import ConvMixer as ConvMixer_jt\n",
+    "from models_jittor import convmlp_s as ConvMLP_s_jt \n",
+    "from models_jittor import convmlp_l as ConvMLP_l_jt \n",
+    "from models_jittor import convmlp_m as ConvMLP_m_jt "
    ]
   },
   {
@@ -28,6 +31,9 @@
     "from models_pytorch import ViP as ViP_pt\n",
     "from models_pytorch import S2MLPv2 as S2MLPv2_pt \n",
     "from models_pytorch import ConvMixer as ConvMixer_pt \n",
+    "from models_pytorch import convmlp_s as ConvMLP_s_pt \n",
+    "from models_pytorch import convmlp_l as ConvMLP_l_pt \n",
+    "from models_pytorch import convmlp_m as ConvMLP_m_pt \n",
     "import time"
    ]
   },
@@ -88,10 +94,12 @@
     "#     expansion_factor = [3]\n",
     "# )\n",
     "\n",
-    "model_jt = ConvMixer_jt(\n",
-    "    dim = 1568,\n",
-    "    depth = 20\n",
-    ")\n"
+    "# model_jt = ConvMixer_jt(\n",
+    "#     dim = 1568,\n",
+    "#     depth = 20\n",
+    "# )\n",
+    "\n",
+    "model_jt = ConvMLP_s_jt(pretrained = True, num_classes = 1000)\n"
    ]
   },
   {
