--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -15,7 +15,8 @@
     "from models_jittor import ConvMixer as ConvMixer_jt\n",
     "from models_jittor import convmlp_s as ConvMLP_s_jt \n",
     "from models_jittor import convmlp_l as ConvMLP_l_jt \n",
-    "from models_jittor import convmlp_m as ConvMLP_m_jt "
+    "from models_jittor import convmlp_m as ConvMLP_m_jt \n",
+    "from models_jittor import RaftMLP as RaftMLP_jt"
    ]
   },
   {
@@ -34,6 +35,7 @@
     "from models_pytorch import convmlp_s as ConvMLP_s_pt \n",
     "from models_pytorch import convmlp_l as ConvMLP_l_pt \n",
     "from models_pytorch import convmlp_m as ConvMLP_m_pt \n",
+    "from models_pytorch import RaftMLP as RaftMLP_pt\n",
     "import time"
    ]
   },
@@ -99,7 +101,17 @@
     "#     depth = 20\n",
     "# )\n",
     "\n",
-    "model_jt = ConvMLP_s_jt(pretrained = True, num_classes = 1000)\n"
+    "# model_jt = ConvMLP_s_jt(pretrained = True, num_classes = 1000)\n",
+    "\n",
+    "model_jt = RaftMLP_jt(\n",
+    "        layers = [\n",
+    "            {\"depth\": 12,\n",
+    "            \"dim\": 768,\n",
+    "            \"patch_size\": 16,\n",
+    "            \"raft_size\": 4}\n",
+    "        ],\n",
+    "        gap = True\n",
+    "    )"
    ]
   },
   {
@@ -119,11 +131,23 @@
     "#     depth=30\n",
     "# )\n",
     "\n",
+    "# model_pt = ConvMLP_s_pt(pretrained = True, num_classes = 1000)\n",
     "\n",
-    "model_pt = ConvMixer_pt(\n",
-    "    dim = 1568,\n",
-    "    depth = 20\n",
-    ")\n",
+    "model_pt = RaftMLP_pt(\n",
+    "        layers = [\n",
+    "            {\"depth\": 12,\n",
+    "            \"dim\": 768,\n",
+    "            \"patch_size\": 16,\n",
+    "            \"raft_size\": 4}\n",
+    "        ],\n",
+    "        gap = True\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "# model_pt = ConvMixer_pt(\n",
+    "#     dim = 1568,\n",
+    "#     depth = 20\n",
+    "# )\n",
     "\n",
     "# model_pt = ResMLP_pt(\n",
     "#     in_channels = 3,\n",
@@ -199,7 +223,7 @@
    "outputs": [],
    "source": [
     "from torchsummary import summary\n",
-    "summary(model_pt, (3, 224, 224), device=\"cpu\")\n",
+    "# summary(model_pt, (3, 224, 224), device=\"cpu\")\n",
     "\n",
     "total_params = sum(p.numel() for p in model_pt.parameters())\n",
     "print(f'{total_params:,} total parameters.')\n",
@@ -319,10 +343,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "5b4ef2005a63f3fbfcb002c702638f25d4022724161b309cbd0d4166936ce374"
+   "hash": "064c611d9234b891146c441aed9a05da17e8be0d2757071636a9fa5c91973321"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -335,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   },
   "orig_nbformat": 4
  },
