--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,8 @@
     "from models_jittor import convmlp_s as ConvMLP_s_jt \n",
     "from models_jittor import convmlp_l as ConvMLP_l_jt \n",
     "from models_jittor import convmlp_m as ConvMLP_m_jt \n",
-    "from models_jittor import RaftMLP as RaftMLP_jt"
+    "from models_jittor import RaftMLP as RaftMLP_jt\n",
+    "from models_jittor import SparseMLP as SparseMLP_jt"
    ]
   },
   {
@@ -36,12 +37,13 @@
     "from models_pytorch import convmlp_l as ConvMLP_l_pt \n",
     "from models_pytorch import convmlp_m as ConvMLP_m_pt \n",
     "from models_pytorch import RaftMLP as RaftMLP_pt\n",
+    "from models_pytorch import SparseMLP as SparseMLP_pt\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +105,25 @@
     "\n",
     "# model_jt = ConvMLP_s_jt(pretrained = True, num_classes = 1000)\n",
     "\n",
-    "model_jt = RaftMLP_jt(\n",
-    "        layers = [\n",
-    "            {\"depth\": 12,\n",
-    "            \"dim\": 768,\n",
-    "            \"patch_size\": 16,\n",
-    "            \"raft_size\": 4}\n",
-    "        ],\n",
-    "        gap = True\n",
+    "# model_jt = RaftMLP_jt(\n",
+    "#         layers = [\n",
+    "#             {\"depth\": 12,\n",
+    "#             \"dim\": 768,\n",
+    "#             \"patch_size\": 16,\n",
+    "#             \"raft_size\": 4}\n",
+    "#         ],\n",
+    "#         gap = True\n",
+    "#     )\n",
+    "\n",
+    "model_jt = SparseMLP_jt(\n",
+    "        image_size=224,\n",
+    "        patch_size=4,\n",
+    "        in_channels=3,\n",
+    "        num_classes=1000,\n",
+    "        d_model=96,\n",
+    "        depth=[2,10,24,2],\n",
+    "        expansion_factor = 2,\n",
+    "        patcher_norm= True\n",
     "    )"
    ]
   },
@@ -133,16 +146,26 @@
     "\n",
     "# model_pt = ConvMLP_s_pt(pretrained = True, num_classes = 1000)\n",
     "\n",
-    "model_pt = RaftMLP_pt(\n",
-    "        layers = [\n",
-    "            {\"depth\": 12,\n",
-    "            \"dim\": 768,\n",
-    "            \"patch_size\": 16,\n",
-    "            \"raft_size\": 4}\n",
-    "        ],\n",
-    "        gap = True\n",
-    "    )\n",
+    "# model_pt = RaftMLP_pt(\n",
+    "#         layers = [\n",
+    "#             {\"depth\": 12,\n",
+    "#             \"dim\": 768,\n",
+    "#             \"patch_size\": 16,\n",
+    "#             \"raft_size\": 4}\n",
+    "#         ],\n",
+    "#         gap = True\n",
+    "#     )\n",
     "\n",
+    "model_pt = SparseMLP_pt(\n",
+    "        image_size=224,\n",
+    "        patch_size=4,\n",
+    "        in_channels=3,\n",
+    "        num_classes=1000,\n",
+    "        d_model=96,\n",
+    "        depth=[2,10,24,2],\n",
+    "        expansion_factor = 2,\n",
+    "        patcher_norm= True\n",
+    "    )\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
@@ -192,15 +215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8,1000,]\n"
+     ]
+    }
+   ],
    "source": [
     "images = jt.randn(8, 3, 224, 224)\n",
     "\n",
     "with jt.no_grad():\n",
     "    output = model_jt(images)\n",
-    "print(output.shape)\n"
+    "print(output.shape)\n",
+    "\n",
+    "total_params = sum(p.numel() for p in model_jt.parameters())\n",
+    "print(f'{total_params:,} total parameters.')\n",
+    "total_trainable_params = sum(\n",
+    "    p.numel() for p in model_jt.parameters() if p.requires_grad)\n",
+    "print(f'{total_trainable_params:,} training parameters.')\n"
    ]
   },
   {
@@ -343,10 +380,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "064c611d9234b891146c441aed9a05da17e8be0d2757071636a9fa5c91973321"
+   "hash": "5b4ef2005a63f3fbfcb002c702638f25d4022724161b309cbd0d4166936ce374"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -359,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
