--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "from models_jittor import convmlp_l as ConvMLP_l_jt \n",
     "from models_jittor import convmlp_m as ConvMLP_m_jt \n",
     "from models_jittor import RaftMLP as RaftMLP_jt\n",
-    "from models_jittor import SparseMLP as SparseMLP_jt"
+    "from models_jittor import SparseMLP as SparseMLP_jt\n",
+    "from models_jittor import HireMLP as HireMLP_jt"
    ]
   },
   {
@@ -38,12 +39,13 @@
     "from models_pytorch import convmlp_m as ConvMLP_m_pt \n",
     "from models_pytorch import RaftMLP as RaftMLP_pt\n",
     "from models_pytorch import SparseMLP as SparseMLP_pt\n",
+    "from models_pytorch import HireMLP as HireMLP_pt\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,15 +117,29 @@
     "#         gap = True\n",
     "#     )\n",
     "\n",
-    "model_jt = SparseMLP_jt(\n",
-    "        image_size=224,\n",
+    "# model_jt = SparseMLP_jt(\n",
+    "#         image_size=224,\n",
+    "#         patch_size=4,\n",
+    "#         in_channels=3,\n",
+    "#         num_classes=1000,\n",
+    "#         d_model=96,\n",
+    "#         depth=[2,10,24,2],\n",
+    "#         expansion_factor = 2,\n",
+    "#         patcher_norm= True\n",
+    "#     )\n",
+    "\n",
+    "model_jt = HireMLP_jt(\n",
     "        patch_size=4,\n",
     "        in_channels=3,\n",
     "        num_classes=1000,\n",
-    "        d_model=96,\n",
-    "        depth=[2,10,24,2],\n",
+    "        d_model=[64, 128, 320, 512],\n",
+    "        h = [4,2,2,1],\n",
+    "        w = [4,2,2,1],\n",
+    "        cross_region_step = [2,2,1,1],\n",
+    "        cross_region_interval = 2,\n",
+    "        depth=[4,6,24,3],\n",
     "        expansion_factor = 2,\n",
-    "        patcher_norm= True\n",
+    "        patcher_norm = True,\n",
     "    )"
    ]
   },
@@ -156,15 +172,29 @@
     "#         gap = True\n",
     "#     )\n",
     "\n",
-    "model_pt = SparseMLP_pt(\n",
-    "        image_size=224,\n",
+    "# model_pt = SparseMLP_pt(\n",
+    "#         image_size=224,\n",
+    "#         patch_size=4,\n",
+    "#         in_channels=3,\n",
+    "#         num_classes=1000,\n",
+    "#         d_model=96,\n",
+    "#         depth=[2,10,24,2],\n",
+    "#         expansion_factor = 2,\n",
+    "#         patcher_norm= True\n",
+    "#     )\n",
+    "\n",
+    "model_pt = HireMLP_pt(\n",
     "        patch_size=4,\n",
     "        in_channels=3,\n",
     "        num_classes=1000,\n",
-    "        d_model=96,\n",
-    "        depth=[2,10,24,2],\n",
+    "        d_model=[64, 128, 320, 512],\n",
+    "        h = [4,2,2,1],\n",
+    "        w = [4,2,2,1],\n",
+    "        cross_region_step = [2,2,1,1],\n",
+    "        cross_region_interval = 2,\n",
+    "        depth=[4,6,24,3],\n",
     "        expansion_factor = 2,\n",
-    "        patcher_norm= True\n",
+    "        patcher_norm = True,\n",
     "    )\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
@@ -215,14 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8,1000,]\n"
+      "[8,1000,]\n",
+      "33,653,544 total parameters.\n",
+      "33,653,544 training parameters.\n"
      ]
     }
    ],
