Add Padding for HireMLP

--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,13 +133,14 @@
     "        in_channels=3,\n",
     "        num_classes=1000,\n",
     "        d_model=[64, 128, 320, 512],\n",
-    "        h = [4,2,2,1],\n",
-    "        w = [4,2,2,1],\n",
+    "        h = [4,3,3,2],\n",
+    "        w = [4,3,3,2],\n",
     "        cross_region_step = [2,2,1,1],\n",
     "        cross_region_interval = 2,\n",
     "        depth=[4,6,24,3],\n",
     "        expansion_factor = 2,\n",
     "        patcher_norm = True,\n",
+    "        padding_type = 'circular',\n",
     "    )"
    ]
   },
@@ -188,8 +189,8 @@
     "        in_channels=3,\n",
     "        num_classes=1000,\n",
     "        d_model=[64, 128, 320, 512],\n",
-    "        h = [4,2,2,1],\n",
-    "        w = [4,2,2,1],\n",
+    "        h = [4,3,3,2],\n",
+    "        w = [4,3,3,2],\n",
     "        cross_region_step = [2,2,1,1],\n",
     "        cross_region_interval = 2,\n",
     "        depth=[4,6,24,3],\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -253,8 +254,8 @@
      "output_type": "stream",
      "text": [
       "[8,1000,]\n",
-      "33,653,544 total parameters.\n",
-      "33,653,544 training parameters.\n"
+      "40,358,184 total parameters.\n",
+      "40,358,184 training parameters.\n"
      ]
     }
    ],
