Add GFNet and CycleMLP in PyTorch

--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,8 @@
     "from models_pytorch import RaftMLP as RaftMLP_pt\n",
     "from models_pytorch import SparseMLP as SparseMLP_pt\n",
     "from models_pytorch import HireMLP as HireMLP_pt\n",
+    "from models_pytorch import GFNet as GFNet_pt\n",
+    "from models_pytorch import CycleMLP_B2 as CycleMLP_B2_pt\n",
     "import time"
    ]
   },
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,19 +186,23 @@
     "#         patcher_norm= True\n",
     "#     )\n",
     "\n",
-    "model_pt = HireMLP_pt(\n",
-    "        patch_size=4,\n",
-    "        in_channels=3,\n",
-    "        num_classes=1000,\n",
-    "        d_model=[64, 128, 320, 512],\n",
-    "        h = [4,3,3,2],\n",
-    "        w = [4,3,3,2],\n",
-    "        cross_region_step = [2,2,1,1],\n",
-    "        cross_region_interval = 2,\n",
-    "        depth=[4,6,24,3],\n",
-    "        expansion_factor = 2,\n",
-    "        patcher_norm = True,\n",
-    "    )\n",
+    "# model_pt = HireMLP_pt(\n",
+    "#         patch_size=4,\n",
+    "#         in_channels=3,\n",
+    "#         num_classes=1000,\n",
+    "#         d_model=[64, 128, 320, 512],\n",
+    "#         h = [4,3,3,2],\n",
+    "#         w = [4,3,3,2],\n",
+    "#         cross_region_step = [2,2,1,1],\n",
+    "#         cross_region_interval = 2,\n",
+    "#         depth=[4,6,24,3],\n",
+    "#         expansion_factor = 2,\n",
+    "#         patcher_norm = True,\n",
+    "#     )\n",
+    "\n",
+    "# model_pt = GFNet_pt()\n",
+    "\n",
+    "model_pt = CycleMLP_B2_pt()\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
@@ -275,9 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 1000])\n"
+     ]
+    }
+   ],
    "source": [
     "images = torch.randn(8, 3, 224, 224)\n",
     "\n",
@@ -288,9 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26,802,504 total parameters.\n",
+      "26,802,504 training parameters.\n"
+     ]
+    }
+   ],
    "source": [
     "from torchsummary import summary\n",
     "# summary(model_pt, (3, 224, 224), device=\"cpu\")\n",
