--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -2,9 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[38;5;2m[i 1026 18:33:32.031476 96 compiler.py:941] Jittor(1.3.1.11) src: /home/lry/miniconda3/lib/python3.8/site-packages/jittor\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.042133 96 compiler.py:942] g++ at /usr/bin/g++(7.5.0)\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.043622 96 compiler.py:943] cache_path: /home/lry/.cache/jittor/jt1.3.1/g++7.5.0/py3.8.5/Linux-4.15.0-1xe3/IntelRXeonRSilxdc/default\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.055266 96 __init__.py:372] Found nvcc(11.1.105) at /usr/local/cuda/bin/nvcc.\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.067723 96 __init__.py:372] Found addr2line(2.30) at /usr/bin/addr2line.\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.293015 96 compiler.py:993] cuda key:cu11.1.105_sm_86\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.540075 96 __init__.py:187] Total mem: 125.56GB, using 16 procs for compiling.\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.696176 96 jit_compiler.cc:27] Load cc_path: /usr/bin/g++\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:32.868087 96 init.cc:61] Found cuda archs: [86,]\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:33.009997 96 __init__.py:372] Found mpicc(2.1.1) at /usr/bin/mpicc.\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:33.211077 96 compile_extern.py:29] found /usr/local/cuda/include/cublas.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:33.229058 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcublas.so\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:33.231125 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcublasLt.so.11\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:34.051894 96 compile_extern.py:29] found /usr/local/cuda/include/cudnn.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:34.100662 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:34.102471 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_infer.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:34.109508 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_train.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:34.111160 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_infer.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:34.379953 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_train.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:35.128760 96 compile_extern.py:29] found /usr/local/cuda/include/curand.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1026 18:33:35.203837 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcurand.so\u001b[m\n"
+     ]
+    }
+   ],
    "source": [
     "import jittor as jt\n",
     "from models_jittor import gMLPForImageClassification as gMLP_jt\n",
@@ -18,12 +46,14 @@
     "from models_jittor import convmlp_m as ConvMLP_m_jt \n",
     "from models_jittor import RaftMLP as RaftMLP_jt\n",
     "from models_jittor import SparseMLP as SparseMLP_jt\n",
-    "from models_jittor import HireMLP as HireMLP_jt"
+    "from models_jittor import HireMLP as HireMLP_jt\n",
+    "# from models_jittor import CycleMLP_B2 as CycleMLP_B2_jt\n",
+    "from models_jittor import AS_MLP as AS_MLP_jt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +72,7 @@
     "from models_pytorch import HireMLP as HireMLP_pt\n",
     "from models_pytorch import GFNet as GFNet_pt\n",
     "from models_pytorch import CycleMLP_B2 as CycleMLP_B2_pt\n",
+    "from models_pytorch import AS_MLP as AS_MLP_pt\n",
     "import time"
    ]
   },
@@ -143,12 +174,16 @@
     "        expansion_factor = 2,\n",
     "        patcher_norm = True,\n",
     "        padding_type = 'circular',\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "#model_jt = CycleMLP_B2_jt()\n",
+    "\n",
+    "# model_jt = AS_MLP_jt()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +237,10 @@
     "\n",
     "# model_pt = GFNet_pt()\n",
     "\n",
-    "model_pt = CycleMLP_B2_pt()\n",
+    "# model_pt = CycleMLP_B2_pt()\n",
+    "\n",
+    "\n",
+    "model_pt = AS_MLP_pt()\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
@@ -281,39 +319,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([8, 1000])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "images = torch.randn(8, 3, 224, 224)\n",
     "\n",
+    "# for AS-MLP\n",
+    "model_pt = model_pt.cuda()\n",
+    "images = images.cuda()\n",
+    "\n",
     "with torch.no_grad():\n",
     "    output = model_pt(images)\n",
-    "print(output.shape)"
+    "print(output.shape)\n",
+    "\n",
+    "total_params = sum(p.numel() for p in model_pt.parameters())\n",
+    "print(f'{total_params:,} total parameters.')\n",
+    "total_trainable_params = sum(\n",
+    "    p.numel() for p in model_pt.parameters() if p.requires_grad)\n",
+    "print(f'{total_trainable_params:,} training parameters.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26,802,504 total parameters.\n",
-      "26,802,504 training parameters.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torchsummary import summary\n",
     "# summary(model_pt, (3, 224, 224), device=\"cpu\")\n",
@@ -436,10 +467,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "5b4ef2005a63f3fbfcb002c702638f25d4022724161b309cbd0d4166936ce374"
+   "hash": "754c20f9487c546afd581004ea9a6340a2f580d2bb3cad6b85d590be0d353d99"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.6.7 64-bit ('edge_python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -452,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.7"
   },
   "orig_nbformat": 4
  },
