--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[38;5;2m[i 1026 18:33:32.031476 96 compiler.py:941] Jittor(1.3.1.11) src: /home/lry/miniconda3/lib/python3.8/site-packages/jittor\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.042133 96 compiler.py:942] g++ at /usr/bin/g++(7.5.0)\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.043622 96 compiler.py:943] cache_path: /home/lry/.cache/jittor/jt1.3.1/g++7.5.0/py3.8.5/Linux-4.15.0-1xe3/IntelRXeonRSilxdc/default\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.055266 96 __init__.py:372] Found nvcc(11.1.105) at /usr/local/cuda/bin/nvcc.\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.067723 96 __init__.py:372] Found addr2line(2.30) at /usr/bin/addr2line.\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.293015 96 compiler.py:993] cuda key:cu11.1.105_sm_86\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.540075 96 __init__.py:187] Total mem: 125.56GB, using 16 procs for compiling.\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.696176 96 jit_compiler.cc:27] Load cc_path: /usr/bin/g++\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:32.868087 96 init.cc:61] Found cuda archs: [86,]\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:33.009997 96 __init__.py:372] Found mpicc(2.1.1) at /usr/bin/mpicc.\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:33.211077 96 compile_extern.py:29] found /usr/local/cuda/include/cublas.h\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:33.229058 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcublas.so\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:33.231125 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcublasLt.so.11\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:34.051894 96 compile_extern.py:29] found /usr/local/cuda/include/cudnn.h\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:34.100662 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:34.102471 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_infer.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:34.109508 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_train.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:34.111160 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_infer.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:34.379953 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_train.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:35.128760 96 compile_extern.py:29] found /usr/local/cuda/include/curand.h\u001b[m\n",
-      "\u001b[38;5;2m[i 1026 18:33:35.203837 96 compile_extern.py:29] found /usr/local/cuda/lib64/libcurand.so\u001b[m\n"
+      "\u001b[38;5;2m[i 1221 16:09:11.445086 36 compiler.py:941] Jittor(1.3.1.15) src: /home/lry/miniconda3/lib/python3.8/site-packages/jittor\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:11.455444 36 compiler.py:942] g++ at /usr/bin/g++(7.5.0)\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:11.457285 36 compiler.py:943] cache_path: /home/lry/.cache/jittor/jt1.3.1/g++7.5.0/py3.8.5/Linux-4.15.0-1xe3/IntelRXeonRSilxdc/default\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:11.469582 36 __init__.py:372] Found nvcc(11.1.105) at /usr/local/cuda/bin/nvcc.\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:11.481682 36 __init__.py:372] Found addr2line(2.30) at /usr/bin/addr2line.\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:11.719000 36 compiler.py:993] cuda key:cu11.1.105_sm_86\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:11.971812 36 __init__.py:187] Total mem: 125.56GB, using 16 procs for compiling.\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:12.122390 36 jit_compiler.cc:27] Load cc_path: /usr/bin/g++\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:12.296226 36 init.cc:61] Found cuda archs: [86,]\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:12.487268 36 __init__.py:372] Found mpicc(2.1.1) at /usr/bin/mpicc.\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:12.692188 36 compile_extern.py:29] found /usr/local/cuda/include/cublas.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:12.708749 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcublas.so\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:12.710636 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcublasLt.so.11\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:13.556076 36 compile_extern.py:29] found /usr/local/cuda/include/cudnn.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:13.592442 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:13.594060 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_infer.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:13.599955 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_train.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:13.601387 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_infer.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:13.839657 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_train.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:14.551138 36 compile_extern.py:29] found /usr/local/cuda/include/curand.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1221 16:09:14.600278 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcurand.so\u001b[m\n"
      ]
     }
    ],
@@ -47,13 +47,13 @@
     "from models_jittor import RaftMLP as RaftMLP_jt\n",
     "from models_jittor import SparseMLP as SparseMLP_jt\n",
     "from models_jittor import HireMLP as HireMLP_jt\n",
-    "# from models_jittor import CycleMLP_B2 as CycleMLP_B2_jt\n",
-    "from models_jittor import AS_MLP as AS_MLP_jt"
+    "from models_jittor import AS_MLP as AS_MLP_jt\n",
+    "from models_jittor import S2MLPv1_deep, S2MLPv1_wide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,29 +161,30 @@
     "#         patcher_norm= True\n",
     "#     )\n",
     "\n",
-    "model_jt = HireMLP_jt(\n",
-    "        patch_size=4,\n",
-    "        in_channels=3,\n",
-    "        num_classes=1000,\n",
-    "        d_model=[64, 128, 320, 512],\n",
-    "        h = [4,3,3,2],\n",
-    "        w = [4,3,3,2],\n",
-    "        cross_region_step = [2,2,1,1],\n",
-    "        cross_region_interval = 2,\n",
-    "        depth=[4,6,24,3],\n",
-    "        expansion_factor = 2,\n",
-    "        patcher_norm = True,\n",
-    "        padding_type = 'circular',\n",
-    "    )\n",
+    "# model_jt = HireMLP_jt(\n",
+    "#         patch_size=4,\n",
+    "#         in_channels=3,\n",
+    "#         num_classes=1000,\n",
+    "#         d_model=[64, 128, 320, 512],\n",
+    "#         h = [4,3,3,2],\n",
+    "#         w = [4,3,3,2],\n",
+    "#         cross_region_step = [2,2,1,1],\n",
+    "#         cross_region_interval = 2,\n",
+    "#         depth=[4,6,24,3],\n",
+    "#         expansion_factor = 2,\n",
+    "#         patcher_norm = True,\n",
+    "#         padding_type = 'circular',\n",
+    "#     )\n",
     "\n",
     "#model_jt = CycleMLP_B2_jt()\n",
     "\n",
-    "# model_jt = AS_MLP_jt()"
+    "# model_jt = AS_MLP_jt()\n",
+    "model_jt = S2MLPv1_wide()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,8 @@
     "# model_pt = CycleMLP_B2_pt()\n",
     "\n",
     "\n",
-    "model_pt = AS_MLP_pt()\n",
+    "# model_pt = AS_MLP_pt()\n",
+    "model_pt = WaveMLP_S()\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,8 +300,8 @@
      "output_type": "stream",
      "text": [
       "[8,1000,]\n",
-      "40,358,184 total parameters.\n",
-      "40,358,184 training parameters.\n"
+      "72,239,848 total parameters.\n",
+      "72,239,848 training parameters.\n"
      ]
     }
    ],
@@ -319,9 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 1000])\n",
+      "14,755,368 total parameters.\n",
+      "14,755,368 training parameters.\n"
+     ]
+    }
+   ],
    "source": [
     "images = torch.randn(8, 3, 224, 224)\n",
     "\n",
@@ -467,10 +479,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "754c20f9487c546afd581004ea9a6340a2f580d2bb3cad6b85d590be0d353d99"
+   "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.7 64-bit ('edge_python': conda)",
+   "display_name": "Python 3.7.6 64-bit",
    "name": "python3"
   },
   "language_info": {
