Add SwinMLP and RepMLPNet

--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[38;5;2m[i 1221 16:09:11.445086 36 compiler.py:941] Jittor(1.3.1.15) src: /home/lry/miniconda3/lib/python3.8/site-packages/jittor\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:11.455444 36 compiler.py:942] g++ at /usr/bin/g++(7.5.0)\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:11.457285 36 compiler.py:943] cache_path: /home/lry/.cache/jittor/jt1.3.1/g++7.5.0/py3.8.5/Linux-4.15.0-1xe3/IntelRXeonRSilxdc/default\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:11.469582 36 __init__.py:372] Found nvcc(11.1.105) at /usr/local/cuda/bin/nvcc.\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:11.481682 36 __init__.py:372] Found addr2line(2.30) at /usr/bin/addr2line.\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:11.719000 36 compiler.py:993] cuda key:cu11.1.105_sm_86\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:11.971812 36 __init__.py:187] Total mem: 125.56GB, using 16 procs for compiling.\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:12.122390 36 jit_compiler.cc:27] Load cc_path: /usr/bin/g++\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:12.296226 36 init.cc:61] Found cuda archs: [86,]\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:12.487268 36 __init__.py:372] Found mpicc(2.1.1) at /usr/bin/mpicc.\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:12.692188 36 compile_extern.py:29] found /usr/local/cuda/include/cublas.h\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:12.708749 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcublas.so\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:12.710636 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcublasLt.so.11\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:13.556076 36 compile_extern.py:29] found /usr/local/cuda/include/cudnn.h\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:13.592442 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:13.594060 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_infer.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:13.599955 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_train.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:13.601387 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_infer.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:13.839657 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_train.so.8\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:14.551138 36 compile_extern.py:29] found /usr/local/cuda/include/curand.h\u001b[m\n",
-      "\u001b[38;5;2m[i 1221 16:09:14.600278 36 compile_extern.py:29] found /usr/local/cuda/lib64/libcurand.so\u001b[m\n"
+      "\u001b[38;5;2m[i 1227 09:44:38.842422 48 compiler.py:944] Jittor(1.3.1.27) src: /home/lry/miniconda3/lib/python3.8/site-packages/jittor\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:38.853090 48 compiler.py:945] g++ at /usr/bin/g++(7.5.0)\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:38.854896 48 compiler.py:946] cache_path: /home/lry/.cache/jittor/jt1.3.1/g++7.5.0/py3.8.5/Linux-4.15.0-1xe3/IntelRXeonRSilxdc/default\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:38.865654 48 __init__.py:372] Found nvcc(11.1.105) at /usr/local/cuda/bin/nvcc.\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:38.877402 48 __init__.py:372] Found addr2line(2.30) at /usr/bin/addr2line.\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:39.073720 48 compiler.py:997] cuda key:cu11.1.105_sm_86\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:39.321505 48 __init__.py:187] Total mem: 125.56GB, using 16 procs for compiling.\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:39.474608 48 jit_compiler.cc:27] Load cc_path: /usr/bin/g++\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:39.623317 48 init.cc:61] Found cuda archs: [86,]\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:39.815691 48 __init__.py:372] Found mpicc(2.1.1) at /usr/bin/mpicc.\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.018778 48 compile_extern.py:29] found /usr/local/cuda/include/cublas.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.037088 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcublas.so\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.039368 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcublasLt.so.11\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.871322 48 compile_extern.py:29] found /usr/local/cuda/include/cudnn.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.905350 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.907306 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_infer.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.913792 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_ops_train.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:40.915126 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_infer.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:41.148306 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcudnn_cnn_train.so.8\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:41.900577 48 compile_extern.py:29] found /usr/local/cuda/include/curand.h\u001b[m\n",
+      "\u001b[38;5;2m[i 1227 09:44:41.952581 48 compile_extern.py:29] found /usr/local/cuda/lib64/libcurand.so\u001b[m\n"
      ]
     }
    ],
@@ -48,12 +48,13 @@
     "from models_jittor import SparseMLP as SparseMLP_jt\n",
     "from models_jittor import HireMLP as HireMLP_jt\n",
     "from models_jittor import AS_MLP as AS_MLP_jt\n",
-    "from models_jittor import S2MLPv1_deep, S2MLPv1_wide"
+    "from models_jittor import S2MLPv1_deep, S2MLPv1_wide\n",
+    "from models_jittor import SwinMLP as SwinMLP_jt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,12 +74,14 @@
     "from models_pytorch import GFNet as GFNet_pt\n",
     "from models_pytorch import CycleMLP_B2 as CycleMLP_B2_pt\n",
     "from models_pytorch import AS_MLP as AS_MLP_pt\n",
+    "from models_pytorch import SwinMLP as SwinMLP_pt\n",
+    "from models_pytorch import create_RepMLPNet_B224, create_RepMLPNet_B256\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +182,8 @@
     "#model_jt = CycleMLP_B2_jt()\n",
     "\n",
     "# model_jt = AS_MLP_jt()\n",
-    "model_jt = S2MLPv1_wide()"
+    "# model_jt = S2MLPv1_wide()\n",
+    "model_jt = SwinMLP_jt()"
    ]
   },
   {
@@ -242,7 +246,8 @@
     "\n",
     "\n",
     "# model_pt = AS_MLP_pt()\n",
-    "model_pt = WaveMLP_S()\n",
+    "# model_pt = WaveMLP_S()\n",
+    "model_pt = SwinMLP_pt()\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
@@ -292,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -300,8 +305,8 @@
      "output_type": "stream",
      "text": [
       "[8,1000,]\n",
-      "72,239,848 total parameters.\n",
-      "72,239,848 training parameters.\n"
+      "19,959,292 total parameters.\n",
+      "19,959,292 training parameters.\n"
      ]
     }
    ],
@@ -329,8 +334,8 @@
      "output_type": "stream",
      "text": [
       "torch.Size([8, 1000])\n",
-      "14,755,368 total parameters.\n",
-      "14,755,368 training parameters.\n"
+      "19,959,292 total parameters.\n",
+      "19,959,292 training parameters.\n"
      ]
     }
    ],
