--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -49,7 +49,8 @@
     "from models_jittor import HireMLP as HireMLP_jt\n",
     "from models_jittor import AS_MLP as AS_MLP_jt\n",
     "from models_jittor import S2MLPv1_deep, S2MLPv1_wide\n",
-    "from models_jittor import SwinMLP as SwinMLP_jt"
+    "from models_jittor import SwinMLP as SwinMLP_jt\n",
+    "from models_jittor import WaveMLP as WaveMLP_jt"
    ]
   },
   {
@@ -76,6 +77,7 @@
     "from models_pytorch import AS_MLP as AS_MLP_pt\n",
     "from models_pytorch import SwinMLP as SwinMLP_pt\n",
     "from models_pytorch import create_RepMLPNet_B224, create_RepMLPNet_B256\n",
+    "from models_pytorch import WaveMLP as WaveMLP_pt\n",
     "import time"
    ]
   },
@@ -183,7 +185,9 @@
     "\n",
     "# model_jt = AS_MLP_jt()\n",
     "# model_jt = S2MLPv1_wide()\n",
-    "model_jt = SwinMLP_jt()"
+    "# model_jt = SwinMLP_jt()\n",
+    "\n",
+    "model_jt = WaveMLP_jt('M')"
    ]
   },
   {
@@ -247,7 +251,9 @@
     "\n",
     "# model_pt = AS_MLP_pt()\n",
     "# model_pt = WaveMLP_S()\n",
-    "model_pt = SwinMLP_pt()\n",
+    "# model_pt = SwinMLP_pt()\n",
+    "\n",
+    "model_pt = WaveMLP_pt('M')\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
