--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -50,7 +50,8 @@
     "from models_jittor import AS_MLP as AS_MLP_jt\n",
     "from models_jittor import S2MLPv1_deep, S2MLPv1_wide\n",
     "from models_jittor import SwinMLP as SwinMLP_jt\n",
-    "from models_jittor import WaveMLP as WaveMLP_jt"
+    "from models_jittor import WaveMLP as WaveMLP_jt\n",
+    "from models_jittor import MS_MLP as MS_MLP_jt"
    ]
   },
   {
@@ -78,6 +79,7 @@
     "from models_pytorch import SwinMLP as SwinMLP_pt\n",
     "from models_pytorch import create_RepMLPNet_B224, create_RepMLPNet_B256\n",
     "from models_pytorch import WaveMLP as WaveMLP_pt\n",
+    "from models_pytorch import MS_MLP as MS_MLP_pt\n",
     "import time"
    ]
   },
@@ -187,7 +189,8 @@
     "# model_jt = S2MLPv1_wide()\n",
     "# model_jt = SwinMLP_jt()\n",
     "\n",
-    "model_jt = WaveMLP_jt('M')"
+    "# model_jt = WaveMLP_jt('M')\n",
+    "model_jt = MS_MLP_jt()"
    ]
   },
   {
@@ -253,7 +256,8 @@
     "# model_pt = WaveMLP_S()\n",
     "# model_pt = SwinMLP_pt()\n",
     "\n",
-    "model_pt = WaveMLP_pt('M')\n",
+    "# model_pt = WaveMLP_pt('M')\n",
+    "model_pt = MS_MLP_pt()\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
